WebDriverManager based on WebDriver.class